--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.appbar_example">
+    package="com.example.appbarapp">
    <application
-        android:label="appbar_example"
+        android:label="appbarapp"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
